# solana-dex-superagg

./: AGGREGATOR_INTEGRATION.md  AI_OVERVIEW.md  CLAUDE.md  Cargo.toml  README.md
apps/bench/: Cargo.toml
apps/bench/src/: main.rs
examples/: basic_swap.rs
src/: client.rs  config.rs  lib.rs
src/aggregators/: jupiter.rs  mod.rs
src/aggregators/dflow/: mod.rs
src/aggregators/jupiter/: mod.rs
src/aggregators/titan/: codec.rs  mod.rs  transaction_builder.rs
tests/: dflow_test.rs  integration_swap_test.rs
