[package]
name = "solana-dex-superagg"
version = "0.1.0"
edition = "2021"

[lib]
name = "solana_dex_superagg"
path = "src/lib.rs"

[dependencies]
figment = { version = "0.10", features = ["env", "test"] }
solana-sdk = "1.18"
solana-client = "1.18"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
