[package]
name = "solana-dex-superagg"
version = "0.1.0"
edition = "2021"

[lib]
name = "solana_dex_superagg"
path = "src/lib.rs"

[dependencies]
figment = { version = "0.10", features = ["env", "test"] }
solana-sdk = "3.0.0"
solana-client = "3.1.5"
solana-pubkey = "2.4.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13.1", features = ["json"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
bincode = "3.0.0"
base64 = "0.22.1"
async-trait = "0.1"
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client.git", package = "jupiter-swap-api-client" }
